Adding more styles

--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -18,7 +18,12 @@ body {
   background: var(--body-backgroud);
 }
 
+a {
+  font-size: 1rem;
+}
+
 button {
+  font-size: 1rem;
   cursor: pointer;
   color: white;
   border: none;
